--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,2 +1,5 @@
 ru:
   setting_default_colors: "Цветовая схема по умолчанию"
+  setting_rtmaterial_color_scheme: "Цветовая схема RTMaterial"
+  setting_rtmaterial_change_icon: "RTMaterial изменять иконку"
+  label_global_setting: "глобальная настройка:"
