Change icon settings fix. Add localization support for color scheme

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,352 @@
 ru:
   setting_default_colors: "Цветовая схема по умолчанию"
   setting_change_icon: "RTMaterial изменять иконку"
-  setting_rtmaterial_color_scheme: "Цветовая схема RTMaterial"
-  setting_rtmaterial_change_icon: "RTMaterial изменять иконку"
-  label_global_setting: "глобальная настройка:"
+  field_rtmaterial_color_scheme: "Цветовая схема RTMaterial"
+  field_rtmaterial_change_icon: "RTMaterial изменять иконку"
+  label_global_setting: "Глобальная настройка:"
+  true: "Да"
+  false: "Нет"
+
+  color_scheme_amber_blue: "янтарный-синий"
+  color_scheme_amber_blueGrey: "янтарный-синеCерый"
+  color_scheme_amber_brown: "янтарный-коричневый"
+  color_scheme_amber_cyan: "янтарный-голубой"
+  color_scheme_amber_deepOrange: "янтарный-темноОранжевый"
+  color_scheme_amber_deepPurple: "янтарный-темноПурпурный"
+  color_scheme_amber_green: "янтарный-зеленый"
+  color_scheme_amber_grey: "янтарный-серый"
+  color_scheme_amber_indigo: "янтарный-индиго"
+  color_scheme_amber_lightBlue: "янтарный-светлоСиний"
+  color_scheme_amber_lightGreen: "янтарный-светлоЗеленый"
+  color_scheme_amber_lime: "янтарный-салатовый"
+  color_scheme_amber_orange: "янтарный-оранжевый"
+  color_scheme_amber_pink: "янтарный-розовый"
+  color_scheme_amber_purple: "янтарный-пурпурный"
+  color_scheme_amber_red: "янтарный-красный"
+  color_scheme_amber_teal: "янтарный-бирюзовый"
+  color_scheme_amber_yellow: "янтарный-желтый"
+  color_scheme_blue_amber: "синий-янтарный"
+  color_scheme_blue_blueGrey: "синий-синеСерый"
+  color_scheme_blue_brown: "синий-коричневый"
+  color_scheme_blue_cyan: "синий-голубой"
+  color_scheme_blue_deepOrange: "синий-темноОранжевый"
+  color_scheme_blue_deepPurple: "синий-темноПурпурный"
+  color_scheme_blue_green: "синий-зеленый"
+  color_scheme_blueGrey_amber: "синеСерый-янтарный"
+  color_scheme_blueGrey_blue: "синеСерый-синий"
+  color_scheme_blueGrey_brown: "синеСерый-коричневый"
+  color_scheme_blue_grey: "синий-серый"
+  color_scheme_blueGrey_cyan: "синеСерый-голубой"
+  color_scheme_blueGrey_deepOrange: "синеСерый-темноОранжевый"
+  color_scheme_blueGrey_deepPurple: "синеСерый-темноПурпурный"
+  color_scheme_blueGrey_green: "синеСерый-зеленый"
+  color_scheme_blueGrey_grey: "синеСерый-серый"
+  color_scheme_blueGrey_indigo: "синеСерый-индиго"
+  color_scheme_blueGrey_lightBlue: "синеСерый-светлоСиний"
+  color_scheme_blueGrey_lightGreen: "синеСерый-светлоЗеленый"
+  color_scheme_blueGrey_lime: "синеСерый-салатовый"
+  color_scheme_blueGrey_orange: "синеСерый-оранжевый"
+  color_scheme_blueGrey_pink: "синеСерый-розовый"
+  color_scheme_blueGrey_purple: "синеСерый-пурпурный"
+  color_scheme_blueGrey_red: "синеСерый-красный"
+  color_scheme_blueGrey_teal: "синеСерый-бирюзовый"
+  color_scheme_blueGrey_yellow: "синеСерый-желтый"
+  color_scheme_blue_indigo: "синий-индиго"
+  color_scheme_blue_lightBlue: "синий-светлоСиний"
+  color_scheme_blue_lightGreen: "синий-светлоЗеленый"
+  color_scheme_blue_lime: "синий-салатовый"
+  color_scheme_blue_orange: "синий-оранжевый"
+  color_scheme_blue_pink: "синий-розовый"
+  color_scheme_blue_purple: "синий-пурпурный"
+  color_scheme_blue_red: "синий-красный"
+  color_scheme_blue_teal: "синий-бирюзовый"
+  color_scheme_blue_yellow: "синий-желтый"
+  color_scheme_brown_amber: "brown-янтарный"
+  color_scheme_brown_blue: "brown-синий"
+  color_scheme_brown_blueGrey: "brown-синеСерый"
+  color_scheme_brown_cyan: "brown-голубой"
+  color_scheme_brown_deepOrange: "brown-темноОранжевый"
+  color_scheme_brown_deepPurple: "brown-темноПурпурный"
+  color_scheme_brown_green: "brown-зеленый"
+  color_scheme_brown_grey: "brown-серый"
+  color_scheme_brown_indigo: "brown-индиго"
+  color_scheme_brown_lightBlue: "brown-светлоСиний"
+  color_scheme_brown_lightGreen: "brown-светлоЗеленый"
+  color_scheme_brown_lime: "brown-салатовый"
+  color_scheme_brown_orange: "brown-оранжевый"
+  color_scheme_brown_pink: "brown-розовый"
+  color_scheme_brown_purple: "brown-пурпурный"
+  color_scheme_brown_red: "brown-красный"
+  color_scheme_brown_teal: "brown-бирюзовый"
+  color_scheme_brown_yellow: "brown-желтый"
+  color_scheme_cyan_amber: "голубой-янтарный"
+  color_scheme_cyan_blue: "голубой-синий"
+  color_scheme_cyan_blueGrey: "голубой-синеСерый"
+  color_scheme_cyan_brown: "голубой-коричневый"
+  color_scheme_cyan_deepOrange: "голубой-темноОранжевый"
+  color_scheme_cyan_deepPurple: "голубой-темноПурпурный"
+  color_scheme_cyan_green: "голубой-зеленый"
+  color_scheme_cyan_grey: "голубой-серый"
+  color_scheme_cyan_indigo: "голубой-индиго"
+  color_scheme_cyan_lightBlue: "голубой-светлоСиний"
+  color_scheme_cyan_lightGreen: "голубой-светлоЗеленый"
+  color_scheme_cyan_lime: "голубой-салатовый"
+  color_scheme_cyan_orange: "голубой-оранжевый"
+  color_scheme_cyan_pink: "голубой-розовый"
+  color_scheme_cyan_purple: "голубой-пурпурный"
+  color_scheme_cyan_red: "голубой-красный"
+  color_scheme_cyan_teal: "голубой-бирюзовый"
+  color_scheme_cyan_yellow: "голубой-желтый"
+  color_scheme_deepOrange_amber: "темноОранжевый-янтарный"
+  color_scheme_deepOrange_blue: "темноОранжевый-синий"
+  color_scheme_deepOrange_blueGrey: "темноОранжевый-синеСерый"
+  color_scheme_deepOrange_brown: "темноОранжевый-коричневый"
+  color_scheme_deepOrange_cyan: "темноОранжевый-голубой"
+  color_scheme_deepOrange_deepPurple: "темноОранжевый-темноПурпурный"
+  color_scheme_deepOrange_green: "темноОранжевый-зеленый"
+  color_scheme_deepOrange_grey: "темноОранжевый-серый"
+  color_scheme_deepOrange_indigo: "темноОранжевый-индиго"
+  color_scheme_deepOrange_lightBlue: "темноОранжевый-светлоСиний"
+  color_scheme_deepOrange_lightGren: "темноОранжевый-светлоЗеленый"
+  color_scheme_deepOrange_lime: "темноОранжевый-салатовый"
+  color_scheme_deepOrange_orange: "темноОранжевый-оранжевый"
+  color_scheme_deepOrange_pink: "темноОранжевый-розовый"
+  color_scheme_deepOrange_purple: "темноОранжевый-пурпурный"
+  color_scheme_deepOrange_red: "темноОранжевый-красный"
+  color_scheme_deepOrange_teal: "темноОранжевый-бирюзовый"
+  color_scheme_deepOrange_yellow: "темноОранжевый-желтый"
+  color_scheme_deepPurple_amber: "темноПурпурный-янтарный"
+  color_scheme_deepPurple_blue: "темноПурпурный-синий"
+  color_scheme_deepPurple_blueGrey: "темноПурпурный-синеСерый"
+  color_scheme_deepPurple_brown: "темноПурпурный-коричневый"
+  color_scheme_deepPurple_cyan: "темноПурпурный-голубой"
+  color_scheme_deepPurple_deepOrange: "темноПурпурный-темноОранжевый"
+  color_scheme_deepPurple_green: "темноПурпурный-зеленый"
+  color_scheme_deepPurple_grey: "темноПурпурный-серый"
+  color_scheme_deepPurple_indigo: "темноПурпурный-индиго"
+  color_scheme_deepPurple_lightBlue: "темноПурпурный-светлоСиний"
+  color_scheme_deepPurple_lightGreen: "темноПурпурный-светлоЗеленый"
+  color_scheme_deepPurple_lime: "темноПурпурный-салатовый"
+  color_scheme_deepPurple_orange: "темноПурпурный-оранжевый"
+  color_scheme_deepPurple_pink: "темноПурпурный-розовый"
+  color_scheme_deepPurple_purple: "темноПурпурный-пурпурный"
+  color_scheme_deepPurple_red: "темноПурпурный-красный"
+  color_scheme_deepPurple_teal: "темноПурпурный-бирюзовый"
+  color_scheme_deepPurple_yellow: "темноПурпурный-желтый"
+  color_scheme_green_amber: "зеленый-янтарный"
+  color_scheme_green_blue: "зеленый-синий"
+  color_scheme_green_blueGrey: "зеленый-синеСерый"
+  color_scheme_green_brown: "зеленый-коричневый"
+  color_scheme_green_cyan: "зеленый-голубой"
+  color_scheme_green_deepOrange: "зеленый-темноОранжевый"
+  color_scheme_green_deepPurple: "зеленый-темноПурпурный"
+  color_scheme_green_grey: "зеленый-серый"
+  color_scheme_green_indigo: "зеленый-индиго"
+  color_scheme_green_lightBlue: "зеленый-светлоСиний"
+  color_scheme_green_lightGreen: "зеленый-светлоЗеленый"
+  color_scheme_green_lime: "зеленый-салатовый"
+  color_scheme_green_orange: "зеленый-оранжевый"
+  color_scheme_green_pink: "зеленый-розовый"
+  color_scheme_green_purple: "зеленый-пурпурный"
+  color_scheme_green_red: "зеленый-красный"
+  color_scheme_green_teal: "зеленый-бирюзовый"
+  color_scheme_green_yellow: "зеленый-желтый"
+  color_scheme_grey_amber: "серый-янтарный"
+  color_scheme_grey_blue: "серый-синий"
+  color_scheme_grey_blueGrey: "серый-синеСерый"
+  color_scheme_grey_brown: "серый-коричневый"
+  color_scheme_grey_cyan: "серый-голубой"
+  color_scheme_grey_deepOrange: "серый-темноОранжевый"
+  color_scheme_grey_deepPurple: "серый-темноПурпурный"
+  color_scheme_grey_green: "серый-зеленый"
+  color_scheme_grey_indigo: "серый-индиго"
+  color_scheme_grey_lightBlue: "серый-светлоСиний"
+  color_scheme_grey_lightGreen: "серый-светлоЗеленый"
+  color_scheme_grey_lime: "серый-салатовый"
+  color_scheme_grey_orange: "серый-оранжевый"
+  color_scheme_grey_pink: "серый-розовый"
+  color_scheme_grey_purple: "серый-пурпурный"
+  color_scheme_grey_red: "серый-красный"
+  color_scheme_grey_teal: "серый-бирюзовый"
+  color_scheme_grey_yellow: "серый-желтый"
+  color_scheme_indigo_amber: "индиго-янтарный"
+  color_scheme_indigo_blue: "индиго-синий"
+  color_scheme_indigo_blueGrey: "индиго-синеСерый"
+  color_scheme_indigo_brown: "индиго-коричневый"
+  color_scheme_indigo_cyan: "индиго-голубой"
+  color_scheme_indigo_deepOrange: "индиго-темноОранжевый"
+  color_scheme_indigo_deepPurple: "индиго-темноПурпурный"
+  color_scheme_indigo_green: "индиго-зеленый"
+  color_scheme_indigo_grey: "индиго-серый"
+  color_scheme_indigo_lightBlue: "индиго-светлоСиний"
+  color_scheme_indigo_lightGreen: "индиго-светлоЗеленый"
+  color_scheme_indigo_lime: "индиго-салатовый"
+  color_scheme_indigo_orange: "индиго-оранжевый"
+  color_scheme_indigo_pink: "индиго-розовый"
+  color_scheme_indigo_purple: "индиго-пурпурный"
+  color_scheme_indigo_red: "индиго-красный"
+  color_scheme_indigo_teal: "индиго-бирюзовый"
+  color_scheme_indigo_yellow: "индиго-желтый"
+  color_scheme_lightBlue_amber: "светлоСиний-янтарный"
+  color_scheme_lightBlue_blue: "светлоСиний-синий"
+  color_scheme_lightBlue_blueGrey: "светлоСиний-синеСерый"
+  color_scheme_lightBlue_brown: "светлоСиний-коричневый"
+  color_scheme_lightBlue_cyan: "светлоСиний-голубой"
+  color_scheme_lightBlue_deepOrange: "светлоСиний-темноОранжевый"
+  color_scheme_lightBlue_deepPurple: "светлоСиний-темноПурпурный"
+  color_scheme_lightBlue_green: "светлоСиний-зеленый"
+  color_scheme_lightBlue_grey: "светлоСиний-серый"
+  color_scheme_lightBlue_indigo: "светлоСиний-индиго"
+  color_scheme_lightBlue_lightGreen: "светлоСиний-светлоЗеленый"
+  color_scheme_lightBlue_lime: "светлоСиний-салатовый"
+  color_scheme_lightBlue_orange: "светлоСиний-оранжевый"
+  color_scheme_lightBlue_pink: "светлоСиний-розовый"
+  color_scheme_lightBlue_purple: "светлоСиний-пурпурный"
+  color_scheme_lightBlue_red: "светлоСиний-красный"
+  color_scheme_lightBlue_teal: "светлоСиний-бирюзовый"
+  color_scheme_lightBlue_yellow: "светлоСиний-желтый"
+  color_scheme_lightGreen_amber: "светлоЗеленый-янтарный"
+  color_scheme_lightGreen_blue: "светлоЗеленый-синий"
+  color_scheme_lightGreen_blueGrey: "светлоЗеленый-синеСерый"
+  color_scheme_lightGreen_brown: "светлоЗеленый-коричневый"
+  color_scheme_lightGreen_cyan: "светлоЗеленый-голубой"
+  color_scheme_lightGreen_deepOrange: "светлоЗеленый-темноОранжевый"
+  color_scheme_lightGreen_deepPurple: "светлоЗеленый-темноПурпурный"
+  color_scheme_lightGreen_green: "светлоЗеленый-зеленый"
+  color_scheme_lightGreen_grey: "светлоЗеленый-серый"
+  color_scheme_lightGreen_indigo: "светлоЗеленый-индиго"
+  color_scheme_lightGreen_lightBlue: "светлоЗеленый-светлоСиний"
+  color_scheme_lightGreen_lime: "светлоЗеленый-салатовый"
+  color_scheme_lightGreen_orange: "светлоЗеленый-оранжевый"
+  color_scheme_lightGreen_pink: "светлоЗеленый-розовый"
+  color_scheme_lightGreen_purple: "светлоЗеленый-пурпурный"
+  color_scheme_lightGreen_red: "светлоЗеленый-красный"
+  color_scheme_lightGreen_teal: "светлоЗеленый-бирюзовый"
+  color_scheme_lightGreen_yellow: "светлоЗеленый-желтый"
+  color_scheme_lime_amber: "салатовый-янтарный"
+  color_scheme_lime_blue: "салатовый-синий"
+  color_scheme_lime_blueGrey: "салатовый-синеСерый"
+  color_scheme_lime_brown: "салатовый-коричневый"
+  color_scheme_lime_cyan: "салатовый-голубой"
+  color_scheme_lime_deepOrange: "салатовый-темноОранжевый"
+  color_scheme_lime_deepPurple: "салатовый-темноПурпурный"
+  color_scheme_lime_green: "салатовый-зеленый"
+  color_scheme_lime_grey: "салатовый-серый"
+  color_scheme_lime_indigo: "салатовый-индиго"
+  color_scheme_lime_lightBlue: "салатовый-светлоСиний"
+  color_scheme_lime_lightGreen: "салатовый-светлоЗеленый"
+  color_scheme_lime_orange: "салатовый-оранжевый"
+  color_scheme_lime_pink: "салатовый-розовый"
+  color_scheme_lime_purple: "салатовый-пурпурный"
+  color_scheme_lime_red: "салатовый-красный"
+  color_scheme_lime_teal: "салатовый-бирюзовый"
+  color_scheme_lime_yellow: "салатовый-желтый"
+  color_scheme_orange_amber: "оранжевый-янтарный"
+  color_scheme_orange_blue: "оранжевый-синий"
+  color_scheme_orange_blueGrey: "оранжевый-синеСерый"
+  color_scheme_orange_brown: "оранжевый-коричневый"
+  color_scheme_orange_cyan: "оранжевый-голубой"
+  color_scheme_orange_deepOrange: "оранжевый-темноОранжевый"
+  color_scheme_orange_deepPurple: "оранжевый-темноПурпурный"
+  color_scheme_orange_green: "оранжевый-зеленый"
+  color_scheme_orange_grey: "оранжевый-серый"
+  color_scheme_orange_indigo: "оранжевый-индиго"
+  color_scheme_orange_lightBlue: "оранжевый-светлоСиний"
+  color_scheme_orange_lightGreen: "оранжевый-светлоЗеленый"
+  color_scheme_orange_lime: "оранжевый-салатовый"
+  color_scheme_orange_pink: "оранжевый-розовый"
+  color_scheme_orange_purple: "оранжевый-пурпурный"
+  color_scheme_orange_red: "оранжевый-красный"
+  color_scheme_orange_teal: "оранжевый-бирюзовый"
+  color_scheme_orange_yellow: "оранжевый-желтый"
+  color_scheme_pink_amber: "розовый-янтарный"
+  color_scheme_pink_blue: "розовый-синий"
+  color_scheme_pink_blueGrey: "розовый-синеСерый"
+  color_scheme_pink_brown: "розовый-коричневый"
+  color_scheme_pink_cyan: "розовый-голубой"
+  color_scheme_pink_deepOrange: "розовый-темноОранжевый"
+  color_scheme_pink_deepPurple: "розовый-темноПурпурный"
+  color_scheme_pink_green: "розовый-зеленый"
+  color_scheme_pink_grey: "розовый-серый"
+  color_scheme_pink_indigo: "розовый-индиго"
+  color_scheme_pink_lightBlue: "розовый-светлоСиний"
+  color_scheme_pink_lightGreen: "розовый-светлоЗеленый"
+  color_scheme_pink_lime: "розовый-салатовый"
+  color_scheme_pink_orange: "розовый-оранжевый"
+  color_scheme_pink_purple: "розовый-пурпурный"
+  color_scheme_pink_red: "розовый-красный"
+  color_scheme_pink_teal: "розовый-бирюзовый"
+  color_scheme_pink_yellow: "розовый-желтый"
+  color_scheme_purple_amber: "пурпурный-янтарный"
+  color_scheme_purple_blue: "пурпурный-синий"
+  color_scheme_purple_blueGrey: "пурпурный-синеСерый"
+  color_scheme_purple_brown: "пурпурный-коричневый"
+  color_scheme_purple_cyan: "пурпурный-голубой"
+  color_scheme_purple_deepOrange: "пурпурный-темноОранжевый"
+  color_scheme_purple_deepPurple: "пурпурный-темноПурпурный"
+  color_scheme_purple_green: "пурпурный-зеленый"
+  color_scheme_purple_grey: "пурпурный-серый"
+  color_scheme_purple_indigo: "пурпурный-индиго"
+  color_scheme_purple_lightBlue: "пурпурный-светлоСиний"
+  color_scheme_purple_lightGreen: "пурпурный-светлоЗеленый"
+  color_scheme_purple_lime: "пурпурный-салатовый"
+  color_scheme_purple_orange: "пурпурный-оранжевый"
+  color_scheme_purple_pink: "пурпурный-розовый"
+  color_scheme_purple_red: "пурпурный-красный"
+  color_scheme_purple_teal: "пурпурный-бирюзовый"
+  color_scheme_purple_yellow: "пурпурный-желтый"
+  color_scheme_red_amber: "красный-янтарный"
+  color_scheme_red_blue: "красный-синий"
+  color_scheme_red_blueGrey: "красный-синеСерый"
+  color_scheme_red_brown: "красный-коричневый"
+  color_scheme_red_cyan: "красный-голубой"
+  color_scheme_red_deepOrange: "красный-темноОранжевый"
+  color_scheme_red_deepPurple: "красный-темноПурпурный"
+  color_scheme_red_green: "красный-зеленый"
+  color_scheme_red_grey: "красный-серый"
+  color_scheme_red_indigo: "красный-индиго"
+  color_scheme_red_lightBlue: "красный-светлоСиний"
+  color_scheme_red_lightGreen: "красный-светлоЗеленый"
+  color_scheme_red_lime: "красный-салатовый"
+  color_scheme_red_orange: "красный-оранжевый"
+  color_scheme_red_pink: "красный-розовый"
+  color_scheme_red_purple: "красный-пурпурный"
+  color_scheme_red_teal: "красный-бирюзовый"
+  color_scheme_red_yellow: "красный-желтый"
+  color_scheme_teal_amber: "бирюзовый-янтарный"
+  color_scheme_teal_blue: "бирюзовый-синий"
+  color_scheme_teal_blueGrey: "бирюзовый-синеСерый"
+  color_scheme_teal_brown: "бирюзовый-коричневый"
+  color_scheme_teal_cyan: "бирюзовый-голубой"
+  color_scheme_teal_deepOrange: "бирюзовый-темноОранжевый"
+  color_scheme_teal_deepPurple: "бирюзовый-темноПурпурный"
+  color_scheme_teal_green: "бирюзовый-зеленый"
+  color_scheme_teal_grey: "бирюзовый-серый"
+  color_scheme_teal_indigo: "бирюзовый-индиго"
+  color_scheme_teal_lightBlue: "бирюзовый-светлоСиний"
+  color_scheme_teal_lightGreen: "бирюзовый-светлоЗеленый"
+  color_scheme_teal_lime: "бирюзовый-салатовый"
+  color_scheme_teal_orange: "бирюзовый-оранжевый"
+  color_scheme_teal_pink: "бирюзовый-розовый"
+  color_scheme_teal_purple: "бирюзовый-пурпурный"
+  color_scheme_teal_red: "бирюзовый-красный"
+  color_scheme_teal_yellow: "бирюзовый-желтый"
+  color_scheme_yellow_amber: "желтый-янтарный"
+  color_scheme_yellow_blue: "желтый-синий"
+  color_scheme_yellow_blueGrey: "желтый-синеСерый"
+  color_scheme_yellow_brown: "желтый-коричневый"
+  color_scheme_yellow_cyan: "желтый-голубой"
+  color_scheme_yellow_deepOrange: "желтый-темноОранжевый"
+  color_scheme_yellow_deepPurple: "желтый-темноПурпурный"
+  color_scheme_yellow_green: "желтый-зеленый"
+  color_scheme_yellow_grey: "желтый-серый"
+  color_scheme_yellow_indigo: "желтый-индиго"
+  color_scheme_yellow_lightBlue: "желтый-светлоСиний"
+  color_scheme_yellow_lightGreen: "желтый-светлоЗеленый"
+  color_scheme_yellow_lime: "желтый-салатовый"
+  color_scheme_yellow_orange: "желтый-оранжевый"
+  color_scheme_yellow_pink: "желтый-розовый"
+  color_scheme_yellow_purple: "желтый-пурпурный"
+  color_scheme_yellow_red: "желтый-красный"
+  color_scheme_yellow_teal: "желтый-бирюзовый"
+
